<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp">

    <TextView
        android:id="@+id/idNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:layout_marginRight="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/promedio"

            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/idPromedio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/promedio"
            android:layout_marginRight="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultado"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/idResultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/promedio"
            android:layout_marginRight="20dp"/>

    </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/purple_500"
            android:layout_below="@+id/idImagen"
            android:layout_marginTop="11dp" />
</LinearLayout>



